manifests/matrix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dendrite
  labels:
    app: dendrite
spec:
  selector:
    app: dendrite
  ports:
    - port: 8008
      targetPort: http
      protocol: TCP
  type: ClusterIP
