manifests/matrix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: matrix
  name: dendrite-ingress-tailscale
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: dendrite
      port:
        number: 8008
  tls:
    - hosts:
        - matrix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-direct
spec:
  rules:
    - host: matrix.k3s.nebula.thehellings.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dendrite
                port:
                  number: 8008
